# olmo-eval

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  Makefile  PR_DESCRIPTION.md  README.md  alembic.ini  pyproject.toml  ruler_marin_8b_base_config.yaml  ruler_nemotron_nano_9b_v2_base_config.yaml  ruler_olmo3_1025_7b_config.yaml  run_c4.sh  run_c4_1g.sh  run_c4_4g  run_c4_4g.sh  tasks_missing.txt
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/metrics/versions/: 20260219_initial_schema.py
alembic/versions/: 20260126_initial_schema.py  20260127_initial_schema.py  20260127_initial_schema_v2.py  20260127_make_experiment_fields_required.py  20260127_rename_config_add_task_hash.py
config/beaker/olmo3/: olmo3_7b_dev_fast.yaml  olmo3_7b_paper.yaml
docs/: distributed_evaluation.md  science_evals_inventory.md  serialized_tasks.md
examples/: serialize_task_example.py
examples/configs/: basic_eval.yaml  large_model.yaml  mixed_gpu.yaml  model_comparison.yaml  parallel_eval.yaml  prioritized_tasks.yaml
plans/: 002_science_literature_evals.md  003_deepscholar_bench.md  004_citation_selection_bias.md  005_litsearch_fixed_corpus.md
podman/: containers.conf  setup_dockerio_mirror
scripts/: build_config.sh  build_image.sh  fix.sh  install_flash_attn.sh  print_gpu_env.py  verify.sh
scripts/baselines/: launch_olmo3_baselines_0426.sh
scripts/beaker/: copy_beaker_secrets.sh  get_beaker_image.sh  push_beaker_image.sh
scripts/internal/: build_litsearch_pools.py  build_sage_dataset.py
scripts/olmoe/: collect_olmoe_eval_results.sh  launch_275m_cx1_base_eval_smoke.sh  launch_275m_cx1_base_eval_suite.sh
src/olmo_eval/: cli.py  runner.py
src/olmo_eval/analysis/: README.md  eval_power.py  pairwise.py  pairwise_html.py  pairwise_metrics.py  pairwise_plot.py  pairwise_viewer_payload.py
src/olmo_eval/analysis/pairwise_viewer/: assets.py
src/olmo_eval/backends/: __init__.py  base.py  huggingface.py  litellm.py  mock.py  vllm.py
src/olmo_eval/cli/: __init__.py  beaker.py  results.py  run.py  run_external.py  storage_setup.py  utils.py
src/olmo_eval/cli/beaker/: __init__.py  config_loader.py  credentials.py  group.py  (+7 more)
src/olmo_eval/common/: beaker_status.py  configs.py  formatters.py  inspection.py  logging.py  pointing.py  progress.py  repr.py  utils.py
src/olmo_eval/core/: __init__.py  configs.py  datatypes.py  debug.py  enums.py  formatters.py  inspection.py  literals.py  logging.py  metrics.py  scorers.py  types.py  utils.py
src/olmo_eval/data/: loader.py  ruler_loader.py  ruler_tasks.py  sources.py
src/olmo_eval/evals/: __init__.py  arc.py
src/olmo_eval/harness/: config.py  harness.py  presets.py
src/olmo_eval/inference/: __init__.py  base.py  gpu_planner.py  hf_cache.py  huggingface.py  litellm.py  manager.py  mock.py  provider_manager.py  tokenizer_utils.py  utils.py  vllm.py  vllm_server.py  vllm_server_provider.py
src/olmo_eval/launch/: __init__.py  beaker.py  config.py  gcs.py
src/olmo_eval/runners/: __init__.py  agent.py  aggregation.py  asynchronous.py  base.py  builders.py  common.py  execution.py  metrics.py  mixins.py  models.py  parallel.py  sequential.py  storage.py  synchronous.py  utils.py
src/olmo_eval/storage/: __init__.py  base.py  file.py  formatters.py  postgres.py  queries.py  repository.py  s3.py  session.py
src/olmo_eval/tasks/: __init__.py  agi_eval.py  aime.py  base.py  basic_skills.py  bbh.py  code.py  core_tasks.py  deepmind_math.py  fim.py  gpqa.py  gsm.py  hellaswag.py  medmcqa.py  minerva.py  mmlu.py  qa.py  registry.py  wikitext.py
src/olmo_eval/tools/: __init__.py  code.py
tests/: test_multimodal_tasks.py  test_runner.py
tests/analysis/: test_eval_power.py  test_pairwise.py  test_pairwise_plot.py
tests/cli/: test_dotlist_overrides.py  test_pairwise.py  test_utils.py
tests/cli/beaker/: test_launch.py
tests/cli/run/: __init__.py  test_config.py
tests/core/: test_citation_validation.py  test_configs.py  test_dense_caption_judge.py  test_formatters.py  test_image_qa_scorers.py  test_llm_judge_scorer.py  test_metrics.py  test_reliability_metrics.py  test_scorers.py  test_tool_scorers.py  test_tool_types.py  test_tools.py  test_trajectory_types.py
tests/core/harness/: conftest.py  test_backend.py  test_config.py  test_harness.py  test_presets.py  test_sandbox_executor.py  test_tool.py
tests/data/: test_gcs_backend.py  test_loader.py  test_s3_backend.py  test_sources.py  test_task_config_integration.py
tests/evals/suites/: test_registry.py  test_science.py
tests/evals/tasks/: test_aime.py  test_arc.py  test_astabench_sqa.py  test_base.py  test_basic_skills.py  test_bbh.py  test_bigcodebench.py  test_core_tasks.py  test_deepmind_math.py  test_expertqa.py  test_fim.py  test_hard_reasoning.py  test_hmmt.py  test_image_qa_dump_parity.py  test_image_qa_pipeline.py  test_image_qa_requests.py  test_lab_bench.py  test_litsearch.py  test_litsearch_rerank.py  test_medqa.py  test_mmmu_pro.py  test_pointing.py  test_registry.py  test_sage.py  test_sage_match_validation.py  test_sage_matchers.py  test_scicode.py  test_simpleqa_agent.py  test_tasks.py
tests/inference/: test_registry.py
tests/inference/metrics/: test_vllm_monitor.py
tests/integration/: README.md  __init__.py  conftest.py  test_metrics.py  test_repository.py  test_storage.py  test_storage_postgres_new.py  test_vllm_backend.py  test_vllm_provider.py
tests/launch/: test_beaker.py  test_config.py  test_gcs.py
tests/providers/: test_force_download.py  test_huggingface_multimodal.py  test_huggingface_provider.py  test_olmo_core_provider.py  test_vllm_provider.py  test_vllm_server_logprobs.py  test_vllm_server_startup.py
tests/runners/: test_async_worker_flow.py  test_external_runner.py
tests/runners/io/: test_builders.py
tests/storage/: README.md  test_base.py  test_file.py  test_imports.py  test_models.py  test_queries.py  test_session.py
tests/tasks/: test_arc.py  test_base.py  test_basic_skills.py  test_bbh.py  test_core_tasks.py  test_deepmind_math.py  test_fim.py  test_registry.py  test_tasks.py
(+379 files in other folders)
