[project]
name = "olmo-eval-internal"
version = "0.1.0"
description = "Evaluation toolkit for OLMo models"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Allen Institute for AI" },
]
keywords = ["olmo", "evaluation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click~=8.3.1",
    "datasets>=3.2.0",
    "numpy>=1.20.0",
    "omegaconf~=2.3.0",
    "prometheus_client>=0.21.0",
    "rich~=14.3.1",
    "sympy>=1.12",
    "textual-plot>=0.10.1",
]

[project.urls]
Homepage = "https://github.com/allenai/olmo-eval"
Repository = "https://github.com/allenai/olmo-eval"
Issues = "https://github.com/allenai/olmo-eval/issues"

[project.optional-dependencies]
hf = [
    "transformers~=4.57.3",
]
vllm = [
    "vllm[runai]==0.13.0",  # runai extras enable S3 model loading
    "opencv-python-headless==4.13.0.92",  # Required to avoid libxcb import error
    "torch-c-dlpack-ext",  # Required for TVM tensor allocation in vLLM
]
litellm = [
    "litellm~=1.80.11",
]
agents = [
    "openai-agents~=0.7.0",
    "httpx~=0.28.1",
]
openhands = [
    "openhands-ai~=1.4.0",
]
sandbox = [
    "swe-rex[modal] @ git+https://github.com/jdahm/SWE-ReX.git@johannd/ai2",
]
beaker = [
    "beaker-py>=2.5.4,<3",
    "beaker-gantry>=3.2.0,<4",
]
s3 = [
    "boto3>=1.34.0",
]
postgres = [
    "psycopg[binary]>=3.1.0",
    "sqlalchemy>=2.0.46",
    "alembic>=1.18.1",
]
gpu = [
    "nvidia-ml-py>=12.560",
]
clients = [
    "openai~=2.21.0",
]
storage = [
    "olmo-eval-internal[s3,postgres]",
]

[project.scripts]
olmo-eval = "olmo_eval.cli:main"

[tool.uv]
package = true
# These extras have incompatible transitive dependencies and cannot be installed together
conflicts = [
    [
        { extra = "agents" },
        { extra = "openhands" },
    ],
    [
        { extra = "vllm" },
        { extra = "openhands" },
    ],
    [
        { extra = "clients" },
        { extra = "openhands" },
    ],
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.0",
    "ty>=0.0.10",
    "pre-commit>=4.0.0",
    "olmo-eval-internal[storage]",
    "jinja2>=3.1.6",
    "google-api-core>=2.0.0",
]

[tool.ty.rules]
# Optional dependencies (torch, vllm, openai, smart_open, math_verify, etc.)
# are imported conditionally via try/except across many modules.
unresolved-import = "warn"
# Deferred/conditional imports used as string annotations (e.g. BeakerLauncher).
unresolved-reference = "warn"
# Subprocess stdin/stdout are Optional[IO[str]] but guarded by runtime checks;
# SQLAlchemy Result.rowcount; Callable __name__ attribute; dynamic __rich_repr__.
unresolved-attribute = "warn"
# OmegaConf.to_object() return type, asyncio coroutine narrowing, overloaded
# decorators — all suppressed with existing # type: ignore[return-value] comments.
invalid-return-type = "warn"
# Complex generic patterns (dataclass fields(), Tool.from_function, etc.)
# suppressed with existing # type: ignore[arg-type] comments.
invalid-argument-type = "warn"
# Type narrowing edge cases suppressed with # type: ignore[assignment] comments.
invalid-assignment = "warn"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.ruff.lint.per-file-ignores]
# Long strings in test fixtures
"tests/**/fixtures.py" = ["E501"]
# Long URLs in model configs
"src/olmo_eval/common/constants/models.py" = ["E501"]
# Verbatim prompt templates from asta-bench reference implementation
"src/olmo_eval/evals/tasks/astabench_sqa.py" = ["E501"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: marks tests requiring external services (docker, etc.)",
]

[tool.coverage.run]
source = ["src/olmo_eval"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"


[tool.gantry]
gh_token_secret = "GITHUB_TOKEN"
log_level = "warning"
quiet = false
